[tool.poetry]
name = "schedulability-prediction"
version = "0.1.0"
description = ""
authors = ["unccx <2336429253@qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
tqdm = "^4.66.5"
simrt = {git = "https://github.com/unccx/SimRT.git"}
dhg = {git = "https://github.com/unccx/DeepHypergraph.git"}
torch = {version = "^2.4.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.19.1+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.4.1+cu118", source = "torch_cu118"}
tensorboard = "^2.17.1"
torch-tb-profiler = "^0.4.3"

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "torch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
